# ECGP

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  export.sh  proj.cmake
.github/workflows/: runTest.yml
doc/pictures/drawio/: .$Untitled Diagram.bkp  .$Untitled Diagram.dtmp  Untitled Diagram
example/Linux/: CMakeLists.txt  build.sh  main.c
example/Windows/: Windows.sln  main.c
example/Windows/VS/: ECGP.sln
example/Windows/src/: main.c
inc/: ECGP.h  ECGP_application.h  ECGP_common.h  ECGP_config.h  ECGP_crc.h  ECGP_link.h  ECGP_list.h  ECGP_network.h  ECGP_physical.h  ECGP_porting.h  ECGP_presentation.h  ECGP_session.h  ECGP_transport .h
inc/misc/: ECGP_crc.h  ECGP_list.h  ECGP_memchain.h  ECGP_mempool.h
simulate/: simulate.sln
simulate/Debug/: simulate.ilk
simulate/Windows/Debug/: Windows.ilk
simulate/Windows/Windows/: Windows.vcxproj  Windows.vcxproj.filters
simulate/Windows/src/: main.c
simulate/simulate/: main.c  simulate.vcxproj  simulate.vcxproj.filters
simulate/simulate/Debug/: vc141.idb
src/: ECGP_application.c  ECGP_crc.c  ECGP_link.c  ECGP_list.c  ECGP_network.c  ECGP_presentation.c  ECGP_transport .c  crc_main.c
src/core/: ECGP_application.c  ECGP_link.c  ECGP_network.c  ECGP_presentation.c  ECGP_session.c  ECGP_transport .c
src/misc/: ECGP_crc.c  ECGP_list.c  ECGP_memchain.c  ECGP_mempool.c
src/port/: simulate.c
src/port/os/: os_example.c
src/port/physical/: simulate.c
test/: CMakeLists.txt  build.sh  calcCoverage.sh  main.c  run.sh
test/cases/: CMakeLists.txt  test_memchain.c  test_mempool.c
(+36 files in other folders)
